--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </form>
          </div>
 
+         <!-- login form -->
          <div class="form login">
             <header>Login</header>
             <form action="#">
